Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -440,6 +440,7 @@
     "design": "Disseny",
     "destination-warehouse": "Magatzem de destí",
     "detail": "Detall",
+    "details": "Detalls",
     "difference": "Diferència",
     "different-passwords": "Les claus no coincideixen %userNick%",
     "different-than": "Diferent que",
@@ -704,6 +705,7 @@
     "heading-account-id-root": "ID pare",
     "health": "Salut",
     "height": "Alt",
+    "hello": "Hola",
     "help": "Ajuda",
     "help-button-p": "Consulta l'ajuda a cada pantalla",
     "help-server-accepts-filesize": "Aquest servidor admet una mida màxima de fitxer de %size% MB.",
@@ -880,6 +882,7 @@
     "login-password-fail": "Error a l'iniciar sessió",
     "login-text": "Escriu el vostre nom d'usuari i contrasenya per iniciar sessió",
     "login-to-continue": "Iniciar sessió per continuar",
+    "login-to-continue-p": "Necessiteu identificar-vos per continuar amb aquesta acció. Feu clic a iniciar sessió o creeu un compte.",
     "login-user-not-found": "Usuari no trobat: %nick%",
     "logo": "Logotip",
     "logout": "Tancar sessió",
@@ -968,6 +971,7 @@
     "more-plugins": "Més plugins...",
     "move-lines": "Moure línies",
     "movements": "moviments",
+    "my-profile": "El meu perfil",
     "mysql": "MySQL",
     "mysql-socket": "Socket MySQL",
     "mysql-socket-p": "Aquest camp només és necessari en alguns hostings MySQL.",
@@ -1169,6 +1173,7 @@
     "printing-formats": "Formats d'impressió",
     "priority": "Prioritat",
     "private": "Privat",
+    "private-key": "Clau privada",
     "process": "Procés",
     "processing": "En procés",
     "product": "Producte",
@@ -1184,6 +1189,7 @@
     "province": "Província",
     "provinces": "Províncies",
     "public": "Públic",
+    "public-key": "Clau pública",
     "purchase-rate": "Taxa de compra",
     "purchased-quantity": "Quant. comprada",
     "purchases": "Compres",
@@ -1256,6 +1262,7 @@
     "renumber-invoices-p": "Renumera les factures en base a la data, de mes petit a més gran",
     "renumber-invoices-success": "Les factures del exercici '%exercise%' han sigut renumerades correctament",
     "repeat-new-password": "Repeteix la contrasenya",
+    "repeat-password": "Repetir contrasenya",
     "reply": "Respuesta",
     "report": "Informe",
     "report-grouping-account": "Agrupa per comptes",
@@ -1393,6 +1400,7 @@
     "stockmin": "Estoc mín.",
     "storage-limit-almost": "Límit d'emmagatzematge gairebé aconseguit (%limit%). Queden %free%",
     "storage-limit-reached": "Límit d'emmagatzematge assolit",
+    "stripe": "Stripe",
     "structured-data-csv": "Fitxer CSV",
     "sub-account": "Subcompte",
     "sub-type": "Subtipus",
@@ -1483,6 +1491,7 @@
     "thousands-separator": "Milers",
     "thursday": "Dijous",
     "ticket": "Tiquet",
+    "tickets": "Tiquets",
     "time": "Hora",
     "timezone": "Zona horària",
     "title": "Títol",
