--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -440,6 +440,7 @@
     "design": "Design",
     "destination-warehouse": "Destination warehouse",
     "detail": "Detail",
+    "details": "Details",
     "difference": "Difference",
     "different-passwords": "Passwords don't match for %userNick%",
     "different-than": "Different than",
@@ -704,6 +705,7 @@
     "heading-account-id-root": "Heading account root",
     "health": "Health",
     "height": "High",
+    "hello": "Hello",
     "help": "Help",
     "help-button-p": "Check help on each screen",
     "help-server-accepts-filesize": "This server support files up to %size% MB.",
@@ -880,6 +882,7 @@
     "login-password-fail": "Login failed",
     "login-text": "Type your user name and password to login",
     "login-to-continue": "Login to continue",
+    "login-to-continue-p": "You need to log in to continue with this action. Click sign in or create an account.",
     "login-user-not-found": "User not found: %nick%",
     "logo": "Logo",
     "logout": "Logout",
@@ -968,6 +971,7 @@
     "more-plugins": "More plugins...",
     "move-lines": "Move lines",
     "movements": "Movements",
+    "my-profile": "My profile",
     "mysql": "MySQL",
     "mysql-socket": "MySQL Socket",
     "mysql-socket-p": "This field is only required in some MySQL hostings.",
@@ -1169,6 +1173,7 @@
     "printing-formats": "Printing formats",
     "priority": "Priority",
     "private": "Private",
+    "private-key": "Private key",
     "process": "Process",
     "processing": "Processing",
     "product": "Product",
@@ -1184,6 +1189,7 @@
     "province": "Province",
     "provinces": "Provinces",
     "public": "Public",
+    "public-key": "Public key",
     "purchase-rate": "Purchase rate",
     "purchased-quantity": "Purchased quantity",
     "purchases": "Purchases",
@@ -1256,6 +1262,7 @@
     "renumber-invoices-p": "Renumber invoices based on date, from lowest to highest",
     "renumber-invoices-success": "Invoices from exercise '%exercise%' have been renumbered correctly",
     "repeat-new-password": "Repeat password",
+    "repeat-password": "Repeat password",
     "reply": "Reply",
     "report": "Report",
     "report-grouping-account": "Group by account",
@@ -1393,6 +1400,7 @@
     "stockmin": "Stock min.",
     "storage-limit-almost": "Storage limit almost reached (%limit%). Remain %free%.",
     "storage-limit-reached": "Storage limit reached",
+    "stripe": "Stripe",
     "structured-data-csv": "CSV file",
     "sub-account": "Sub-account",
     "sub-type": "Sub-type",
@@ -1483,6 +1491,7 @@
     "thousands-separator": "Thousands separator",
     "thursday": "Thursday",
     "ticket": "Ticket",
+    "tickets": "Tickets",
     "time": "Time",
     "timezone": "Time zone",
     "title": "Title",
