--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -440,6 +440,7 @@
     "design": "Diseinua",
     "destination-warehouse": "Biltegi jasotzailea",
     "detail": "Xehetasuna",
+    "details": "Detalles",
     "difference": "Diferentzia",
     "different-passwords": "%userNick% erabiltzailearen pasahitzak ez dira berdinak",
     "different-than": "Honen ezberdina",
@@ -704,6 +705,7 @@
     "heading-account-id-root": "Kontu nagusiaren erroa",
     "health": "Osasuna",
     "height": "Altuera",
+    "hello": "Kaixo",
     "help": "Laguntza",
     "help-button-p": "Laguntza pantaila bakoitzean kontsultatu",
     "help-server-accepts-filesize": "Zerbitzari honek %size% MB. tamaina onartzen du gehienez.",
@@ -880,6 +882,7 @@
     "login-password-fail": "Erabiltzailea edo pasahitza ez dira zuzenak",
     "login-text": "Idatzi zure erabiltzaile izena eta pasahitza saioa hasteko",
     "login-to-continue": "Hasi saioa jarraitzeko",
+    "login-to-continue-p": "Saioa hasi behar duzu ekintza honekin jarraitzeko. Egin klik saioa hasteko edo sortu kontu bat.",
     "login-user-not-found": "Ez da aurkitu erabiltzailea: %nick%",
     "logo": "Logoa",
     "logout": "Saioa amaitu",
@@ -968,6 +971,7 @@
     "more-plugins": "Plugin gehiago...",
     "move-lines": "Lerroak mugitu",
     "movements": "Mugimenduak",
+    "my-profile": "Nire profila",
     "mysql": "MySQL",
     "mysql-socket": "MySQL Socketa",
     "mysql-socket-p": "Eremu hau MySQL zerbitzari batzuk eskatzen dute bakarrik.",
@@ -1169,6 +1173,7 @@
     "printing-formats": "Inprimatze formatuak",
     "priority": "Lehentasuna",
     "private": "Pribatua",
+    "private-key": "Giltza pribatua",
     "process": "Prozesua",
     "processing": "Prozesatzen",
     "product": "Produktua",
@@ -1184,6 +1189,7 @@
     "province": "Herrialdea",
     "provinces": "Probintziak",
     "public": "Publikoa",
+    "public-key": "Giltza publikoa",
     "purchase-rate": "Erosketa tasa",
     "purchased-quantity": "Erositako kopurua",
     "purchases": "Erosketak",
@@ -1256,6 +1262,7 @@
     "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
     "renumber-invoices-success": "Las facturas del ejercicio '%exercise%' han sido renumeradas correctamente",
     "repeat-new-password": "Pasahitza berriz sartu",
+    "repeat-password": "Pasahitza errepikatu",
     "reply": "Erantzuna",
     "report": "Txostena",
     "report-grouping-account": "Kontuen arabera elkartu",
@@ -1393,6 +1400,7 @@
     "stockmin": "Gutxienezko stocka",
     "storage-limit-almost": "Límite de almacenamiento casi alcanzado (%limit%). Quedan %free%",
     "storage-limit-reached": "Memoria bere mugara iritsi da",
+    "stripe": "Stripe",
     "structured-data-csv": "CSV artxiboa",
     "sub-account": "Azpi-kontua",
     "sub-type": "Azpimota",
@@ -1483,6 +1491,7 @@
     "thousands-separator": "Milakoen banatzailea",
     "thursday": "Osteguna",
     "ticket": "Tiketa",
+    "tickets": "Tiketak",
     "time": "Ordua",
     "timezone": "Ordu-zona",
     "title": "Izenburua",
