--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -440,6 +440,7 @@
     "design": "Diseño",
     "destination-warehouse": "Entrepôt de destination",
     "detail": "Détail",
+    "details": "Detalles",
     "difference": "Différence",
     "different-passwords": "Les mots de passe ne correspondent pas %userNick%",
     "different-than": "Différent de",
@@ -704,6 +705,7 @@
     "heading-account-id-root": "En-tête de compte",
     "health": "Santé",
     "height": "Alto",
+    "hello": "Bonjour",
     "help": "Aide",
     "help-button-p": "Consulta la ayuda en cada pantalla",
     "help-server-accepts-filesize": "Ce serveur prend en charge une taille maximale de %size% MB.",
@@ -880,6 +882,7 @@
     "login-password-fail": "Échec de la connexion",
     "login-text": "Entrez votre nom d'utilisateur et mot de passe pour vous connecter",
     "login-to-continue": "Connectez-vous pour continuer",
+    "login-to-continue-p": "Necesita identificarse para continuar con esta acción. Haga clic en iniciar sesión o cree una cuenta.",
     "login-user-not-found": "Utilisateur non trouvé",
     "logo": "Logo",
     "logout": "Connectez - Out",
@@ -968,6 +971,7 @@
     "more-plugins": "Plus de modules",
     "move-lines": "Déplacer les lignes",
     "movements": "Mouvements",
+    "my-profile": "Mi perfil",
     "mysql": "MySQL",
     "mysql-socket": "Socket MySQL",
     "mysql-socket-p": "Ce champ est uniquement nécessaire dans certains hostings MySQL.",
@@ -1169,6 +1173,7 @@
     "printing-formats": "Formats d'impression",
     "priority": "Priorité",
     "private": "Privé",
+    "private-key": "Clave privada",
     "process": "Proceso",
     "processing": "Traitement",
     "product": "Produit",
@@ -1184,6 +1189,7 @@
     "province": "département",
     "provinces": "Provinces",
     "public": "Publique",
+    "public-key": "Clave pública",
     "purchase-rate": "Taux d'achat",
     "purchased-quantity": "Quantité achetée",
     "purchases": "Achats",
@@ -1256,6 +1262,7 @@
     "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
     "renumber-invoices-success": "Las facturas del ejercicio '%exercise%' han sido renumeradas correctamente",
     "repeat-new-password": "Répéter mot de passe",
+    "repeat-password": "Repetir contraseña",
     "reply": "Respuesta",
     "report": "Rapport",
     "report-grouping-account": "Grouper par compte",
@@ -1393,6 +1400,7 @@
     "stockmin": "Stock min.",
     "storage-limit-almost": "Límite de almacenamiento casi alcanzado (%limit%). Quedan %free%",
     "storage-limit-reached": "Limite de stock atteinte",
+    "stripe": "Stripe",
     "structured-data-csv": "Fichier CSV",
     "sub-account": "Sous-compte",
     "sub-type": "Sous-type",
@@ -1483,6 +1491,7 @@
     "thousands-separator": "Séparateur de milliers",
     "thursday": "Jeudi",
     "ticket": "Ticket",
+    "tickets": "Tickets",
     "time": "Heure",
     "timezone": "Sélectionner le fuseau horaire",
     "title": "Titre",
