--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -440,6 +440,7 @@
     "design": "Deseño",
     "destination-warehouse": "Almacén de destino",
     "detail": "Detalle",
+    "details": "Detalles",
     "difference": "Diferencia",
     "different-passwords": "Os contrasinais non coinciden para %userNick%",
     "different-than": "Diferente que",
@@ -704,6 +705,7 @@
     "heading-account-id-root": "ID pai",
     "health": "Saúde",
     "height": "Alto",
+    "hello": "Hola",
     "help": "Axuda",
     "help-button-p": "Consulta a axuda en cada pantalla",
     "help-server-accepts-filesize": "Este servidor admite un tamaño máximo de %size% MB.",
@@ -880,6 +882,7 @@
     "login-password-fail": "Fallo de sesión",
     "login-text": "Introduce o teu nome de usuario e contrasinal para iniciar sesión",
     "login-to-continue": "Inicie sesión para continuar",
+    "login-to-continue-p": "Necesita identificarse para continuar con esta acción. Faga clic en iniciar sesión ou cre unha conta.",
     "login-user-not-found": "Usuario non atopado",
     "logo": "Logotipo",
     "logout": "Saír",
@@ -968,6 +971,7 @@
     "more-plugins": "Máis plugins",
     "move-lines": "Mover líneas",
     "movements": "Movementos",
+    "my-profile": "O meu perfil",
     "mysql": "MySQL",
     "mysql-socket": "Socket MySQL",
     "mysql-socket-p": "Este campo só é necesario nalgúns hostings MySQL.",
@@ -1169,6 +1173,7 @@
     "printing-formats": "Formatos de impresión",
     "priority": "prioridade",
     "private": "Privado",
+    "private-key": "Clave privada",
     "process": "Proceso",
     "processing": "Procesando",
     "product": "Produto",
@@ -1184,6 +1189,7 @@
     "province": "Provincia",
     "provinces": "Provincias",
     "public": "Público",
+    "public-key": "Clave pública",
     "purchase-rate": "Taxa de compra",
     "purchased-quantity": "Cantidade comprada",
     "purchases": "Compra",
@@ -1256,6 +1262,7 @@
     "renumber-invoices-p": "Renumera as facturas en base á data, de menor a maior",
     "renumber-invoices-success": "As facturas do exercicio '%exercise%' foron renumeradas correctamente",
     "repeat-new-password": "Repite o contrasinal",
+    "repeat-password": "Repetir contrasinal",
     "reply": "Resposta",
     "report": "Informe",
     "report-grouping-account": "Agrupar por contas",
@@ -1393,6 +1400,7 @@
     "stockmin": "Stock mín.",
     "storage-limit-almost": "Límite de almacenamento casi alcanzado (%limit%). Quedan %free%",
     "storage-limit-reached": "Límite de almacenamento alcanzado",
+    "stripe": "Stripe",
     "structured-data-csv": "Ficheiro CSV",
     "sub-account": "Sub-conta",
     "sub-type": "Subtipo",
@@ -1483,6 +1491,7 @@
     "thousands-separator": "Separador de millares",
     "thursday": "Xoves",
     "ticket": "Ticket",
+    "tickets": "Tickets",
     "time": "Hora",
     "timezone": "Zona horaria",
     "title": "Título",
