--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -440,6 +440,7 @@
     "design": "Diseño",
     "destination-warehouse": "Magazzino di Destinazione",
     "detail": "dettaglio",
+    "details": "Detalles",
     "difference": "difference",
     "different-passwords": "Le password non corrispondono %1$s",
     "different-than": "Diverso da",
@@ -704,6 +705,7 @@
     "heading-account-id-root": "Radice dell'account di intestazione",
     "health": "health",
     "height": "Alto",
+    "hello": "Hola",
     "help": "aiutare",
     "help-button-p": "Consulta la ayuda en cada pantalla",
     "help-server-accepts-filesize": "Questo server supporta una dimensione massima di %1$s MB. Se il plugin prende il sopravvento, si sarà in grado di caricare, anche non si può lasciare nulla.",
@@ -880,6 +882,7 @@
     "login-password-fail": "Accesso fallito",
     "login-text": "Accesso",
     "login-to-continue": "login-to-continue",
+    "login-to-continue-p": "Necesita identificarse para continuar con esta acción. Haga clic en iniciar sesión o cree una cuenta.",
     "login-user-not-found": "Utente non trovato",
     "logo": "logo",
     "logout": "Disconnettersi",
@@ -968,6 +971,7 @@
     "more-plugins": "more-plugins",
     "move-lines": "Mover líneas",
     "movements": "movements",
+    "my-profile": "Mi perfil",
     "mysql": "MySQL",
     "mysql-socket": "Socket MySQL",
     "mysql-socket-p": "Questo campo è necessaria solo in alcuni hosting MySQL.",
@@ -1169,6 +1173,7 @@
     "printing-formats": "Formati di stampa",
     "priority": "priority",
     "private": "private",
+    "private-key": "Clave privada",
     "process": "Proceso",
     "processing": "processing",
     "product": "Prodotto",
@@ -1184,6 +1189,7 @@
     "province": "provincia",
     "provinces": "provinces",
     "public": "Pubblico",
+    "public-key": "Clave pública",
     "purchase-rate": "Tasso di acquisto",
     "purchased-quantity": "purchased-quantity",
     "purchases": "acquisti",
@@ -1256,6 +1262,7 @@
     "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
     "renumber-invoices-success": "Las facturas del ejercicio '%exercise%' han sido renumeradas correctamente",
     "repeat-new-password": "Ripetere la password",
+    "repeat-password": "Repetir contraseña",
     "reply": "risposta",
     "report": "report",
     "report-grouping-account": "Group by account",
@@ -1393,6 +1400,7 @@
     "stockmin": "Scorte min.",
     "storage-limit-almost": "Límite de almacenamiento casi alcanzado (%limit%). Quedan %free%",
     "storage-limit-reached": "storage-limit-reached",
+    "stripe": "Stripe",
     "structured-data-csv": "File CSV",
     "sub-account": "Account secondario",
     "sub-type": "sub-type",
@@ -1483,6 +1491,7 @@
     "thousands-separator": "migliaia",
     "thursday": "thursday",
     "ticket": "Ticket",
+    "tickets": "Tickets",
     "time": "Time",
     "timezone": "Seleziona il fuso orario",
     "title": "Titolo",
