--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -440,6 +440,7 @@
     "design": "Diseño",
     "destination-warehouse": "Ziellager",
     "detail": "Detail",
+    "details": "Detalles",
     "difference": "Unterschied",
     "different-passwords": "Passwörter stimmen nicht überein %1$s",
     "different-than": "Anders als",
@@ -704,6 +705,7 @@
     "heading-account-id-root": "Überweisungskonto root",
     "health": "Gesundheit",
     "height": "Hoch",
+    "hello": "Hola",
     "help": "Hilfe",
     "help-button-p": "Consulta la ayuda en cada pantalla",
     "help-server-accepts-filesize": "Dieser Server unterstützt eine maximale Größe von %1$s MB. Wenn das Plugin übernimmt, wird fehlschlagen, es zu laden, auch kann man nichts verlassen.",
@@ -880,6 +882,7 @@
     "login-password-fail": "Anmeldung fehlgeschlagen",
     "login-text": "Anmeldung",
     "login-to-continue": "login-to-continue",
+    "login-to-continue-p": "Necesita identificarse para continuar con esta acción. Haga clic en iniciar sesión o cree una cuenta.",
     "login-user-not-found": "Benutzer nicht gefunden",
     "logo": "Logotyp",
     "logout": "Ausloggen",
@@ -968,6 +971,7 @@
     "more-plugins": "more-plugins",
     "move-lines": "Mover líneas",
     "movements": "movements",
+    "my-profile": "Mi perfil",
     "mysql": "MySQL",
     "mysql-socket": "Socket MySQL",
     "mysql-socket-p": "Dieses Feld ist nur notwendig, in einigen Hostings MySQL.",
@@ -1169,6 +1173,7 @@
     "printing-formats": "Druckformate",
     "priority": "Priorität",
     "private": "Privat",
+    "private-key": "Clave privada",
     "process": "Proceso",
     "processing": "processing",
     "product": "Produkt",
@@ -1184,6 +1189,7 @@
     "province": "Provinz",
     "provinces": "provinces",
     "public": "Öffentlichkeit",
+    "public-key": "Clave pública",
     "purchase-rate": "Kaufrate",
     "purchased-quantity": "purchased-quantity",
     "purchases": "Käufe",
@@ -1256,6 +1262,7 @@
     "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
     "renumber-invoices-success": "Las facturas del ejercicio '%exercise%' han sido renumeradas correctamente",
     "repeat-new-password": "Passwort wiederholen",
+    "repeat-password": "Repetir contraseña",
     "reply": "Respuesta",
     "report": "Bericht",
     "report-grouping-account": "Nach Konto gruppieren",
@@ -1393,6 +1400,7 @@
     "stockmin": "Lager min.",
     "storage-limit-almost": "Límite de almacenamiento casi alcanzado (%limit%). Quedan %free%",
     "storage-limit-reached": "storage-limit-reached",
+    "stripe": "Stripe",
     "structured-data-csv": "CSV-Datei",
     "sub-account": "Unterkonto",
     "sub-type": "sub-type",
@@ -1483,6 +1491,7 @@
     "thousands-separator": "Tausende",
     "thursday": "thursday",
     "ticket": "Ticket",
+    "tickets": "Tickets",
     "time": "Time",
     "timezone": "Wähle Zeitzone aus",
     "title": "Title",
