--- a/Core/Translation/es_PA.json
+++ b/Core/Translation/es_PA.json
@@ -440,6 +440,7 @@
     "design": "Diseño",
     "destination-warehouse": "Almacén de destino",
     "detail": "Detalle",
+    "details": "Detalles",
     "difference": "Diferencia",
     "different-passwords": "Las contraseñas no coinciden para el usuario %userNick%",
     "different-than": "Diferente que",
@@ -704,6 +705,7 @@
     "heading-account-id-root": "ID padre",
     "health": "Salud",
     "height": "Alto",
+    "hello": "Hola",
     "help": "Ayuda",
     "help-button-p": "Consulta la ayuda en cada pantalla",
     "help-server-accepts-filesize": "Este servidor admite un tamaño máximo de %size% MB.",
@@ -880,6 +882,7 @@
     "login-password-fail": "El usuario o la contraseña son incorrectos",
     "login-text": "Escriba su nombre de usuario y contraseña para iniciar sesión",
     "login-to-continue": "Inicie sesión para continuar",
+    "login-to-continue-p": "Necesita identificarse para continuar con esta acción. Haga clic en iniciar sesión o cree una cuenta.",
     "login-user-not-found": "Usuario no encontrado: %nick%",
     "logo": "Logotipo",
     "logout": "Cerrar sesión",
@@ -968,6 +971,7 @@
     "more-plugins": "Más plugins...",
     "move-lines": "Mover líneas",
     "movements": "Movimientos",
+    "my-profile": "Mi perfil",
     "mysql": "MySQL",
     "mysql-socket": "Socket MySQL",
     "mysql-socket-p": "Este campo sólo es requerido en algunos hostings con MySQL.",
@@ -1169,6 +1173,7 @@
     "printing-formats": "Formatos de impresión",
     "priority": "Prioridad",
     "private": "Privado",
+    "private-key": "Clave privada",
     "process": "Proceso",
     "processing": "Procesando",
     "product": "Producto",
@@ -1184,6 +1189,7 @@
     "province": "Provincia",
     "provinces": "Provincias",
     "public": "Público",
+    "public-key": "Clave pública",
     "purchase-rate": "Tasa de compras",
     "purchased-quantity": "Cant. comprada",
     "purchases": "Compras",
@@ -1256,6 +1262,7 @@
     "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
     "renumber-invoices-success": "Las facturas del ejercicio '%exercise%' han sido renumeradas correctamente",
     "repeat-new-password": "Repite la contraseña",
+    "repeat-password": "Repetir contraseña",
     "reply": "Respuesta",
     "report": "Informe",
     "report-grouping-account": "Agrupar por cuentas",
@@ -1393,6 +1400,7 @@
     "stockmin": "Stock mín.",
     "storage-limit-almost": "Límite de almacenamiento (%limit%) casi alcanzado (%used%). Quedan %free%",
     "storage-limit-reached": "Límite de almacenamiento alcanzado",
+    "stripe": "Stripe",
     "structured-data-csv": "Archivo CSV",
     "sub-account": "Subcuenta",
     "sub-type": "Subtipo",
@@ -1483,6 +1491,7 @@
     "thousands-separator": "Separador de millares",
     "thursday": "Jueves",
     "ticket": "Ticket",
+    "tickets": "Tickets",
     "time": "Hora",
     "timezone": "Zona horaria",
     "title": "Título",
