--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -440,6 +440,7 @@
     "design": "Diseño",
     "destination-warehouse": "Destination warehouse",
     "detail": "Detalhe",
+    "details": "Detalles",
     "difference": "difference",
     "different-passwords": "As senhas não correspondem a 0",
     "different-than": "Diferente de",
@@ -704,6 +705,7 @@
     "heading-account-id-root": "Cabeçalho da raiz da conta",
     "health": "health",
     "height": "Alto",
+    "hello": "Hola",
     "help": "Socorro",
     "help-button-p": "Consulta la ayuda en cada pantalla",
     "help-server-accepts-filesize": "This server support files up to %size% MB.",
@@ -880,6 +882,7 @@
     "login-password-fail": "Falha na autenticação",
     "login-text": "Entrar",
     "login-to-continue": "login-to-continue",
+    "login-to-continue-p": "Necesita identificarse para continuar con esta acción. Haga clic en iniciar sesión o cree una cuenta.",
     "login-user-not-found": "Usuário não encontrado",
     "logo": "logo",
     "logout": "Sair",
@@ -968,6 +971,7 @@
     "more-plugins": "Mais plugins",
     "move-lines": "Mover líneas",
     "movements": "movements",
+    "my-profile": "Mi perfil",
     "mysql": "MySQL",
     "mysql-socket": "Socket MySQL",
     "mysql-socket-p": "Este campo só é necessário em algumas hospedagens MySQL.",
@@ -1169,6 +1173,7 @@
     "printing-formats": "printing-formats",
     "priority": "Prioridade",
     "private": "Privado",
+    "private-key": "Clave privada",
     "process": "Proceso",
     "processing": "A processar",
     "product": "produtos",
@@ -1184,6 +1189,7 @@
     "province": "Província",
     "provinces": "provinces",
     "public": "Público",
+    "public-key": "Clave pública",
     "purchase-rate": "Taxa de compra",
     "purchased-quantity": "purchased-quantity",
     "purchases": "Compras",
@@ -1256,6 +1262,7 @@
     "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
     "renumber-invoices-success": "Las facturas del ejercicio '%exercise%' han sido renumeradas correctamente",
     "repeat-new-password": "Repita a senha",
+    "repeat-password": "Repetir contraseña",
     "reply": "Respuesta",
     "report": "Relatório",
     "report-grouping-account": "Group by account",
@@ -1393,6 +1400,7 @@
     "stockmin": "Stock min.",
     "storage-limit-almost": "Límite de almacenamiento casi alcanzado (%limit%). Quedan %free%",
     "storage-limit-reached": "storage-limit-reached",
+    "stripe": "Stripe",
     "structured-data-csv": "Arquivo CSV",
     "sub-account": "Sub conta",
     "sub-type": "sub-type",
@@ -1483,6 +1491,7 @@
     "thousands-separator": "Milhares",
     "thursday": "quinta-feira",
     "ticket": "Ticket",
+    "tickets": "Tickets",
     "time": "Hora",
     "timezone": "Selecione fuso horário",
     "title": "Título",
