--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -440,6 +440,7 @@
     "design": "Diseño",
     "destination-warehouse": "Almagasén de destí",
     "detail": "Detall",
+    "details": "Detalles",
     "difference": "Diferència",
     "different-passwords": "Les contrasenyes per a l'usuari %userNick% no coincidixen",
     "different-than": "Diferent de",
@@ -704,6 +705,7 @@
     "heading-account-id-root": "ID del pare",
     "health": "Salut",
     "height": "Alto",
+    "hello": "Hola",
     "help": "Ajuda",
     "help-button-p": "Consulta la ayuda en cada pantalla",
     "help-server-accepts-filesize": "Este servidor permet fitxers d'una mida màxima de %size% MB.",
@@ -880,6 +882,7 @@
     "login-password-fail": "L'usuari o la contrasenya no són correctes",
     "login-text": "Escriu el teu nom d'usuari i la contrasenya per a iniciar la sessió",
     "login-to-continue": "Inicia sessió per a continuar",
+    "login-to-continue-p": "Necesita identificarse para continuar con esta acción. Haga clic en iniciar sesión o cree una cuenta.",
     "login-user-not-found": "L'usuari no existix",
     "logo": "Logo",
     "logout": "Tancar la sessió",
@@ -968,6 +971,7 @@
     "more-plugins": "Més complements...",
     "move-lines": "Mover líneas",
     "movements": "Moviments",
+    "my-profile": "Mi perfil",
     "mysql": "MySQL",
     "mysql-socket": "Socket MySQL",
     "mysql-socket-p": "Aquest camp només és necessari en alguns hostings MySQL.",
@@ -1169,6 +1173,7 @@
     "printing-formats": "Formats d'impressió",
     "priority": "Prioritat",
     "private": "private",
+    "private-key": "Clave privada",
     "process": "Proceso",
     "processing": "processing",
     "product": "Producte",
@@ -1184,6 +1189,7 @@
     "province": "Província",
     "provinces": "Províncies",
     "public": "Públic",
+    "public-key": "Clave pública",
     "purchase-rate": "Taxa de compra",
     "purchased-quantity": "purchased-quantity",
     "purchases": "Compres",
@@ -1256,6 +1262,7 @@
     "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
     "renumber-invoices-success": "Las facturas del ejercicio '%exercise%' han sido renumeradas correctamente",
     "repeat-new-password": "Repetix la contrasenya",
+    "repeat-password": "Repetir contraseña",
     "reply": "Respuesta",
     "report": "Informe",
     "report-grouping-account": "Agrupar per contes",
@@ -1393,6 +1400,7 @@
     "stockmin": "Estoc mínim",
     "storage-limit-almost": "Límite de almacenamiento casi alcanzado (%limit%). Quedan %free%",
     "storage-limit-reached": "storage-limit-reached",
+    "stripe": "Stripe",
     "structured-data-csv": "Archiu CSV",
     "sub-account": "Subconte",
     "sub-type": "Subtipus",
@@ -1483,6 +1491,7 @@
     "thousands-separator": "Separador de millars",
     "thursday": "thursday",
     "ticket": "Ticket",
+    "tickets": "Tickets",
     "time": "Hora",
     "timezone": "Selecciona la zona horària",
     "title": "Títul",
