--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -319,6 +319,7 @@
     "counterpart": "Contrapartida",
     "countries": "Països",
     "country": "País",
+    "country-not-in-eu": "El %codiso% no pertenece a ningún país de la unión Europea",
     "create": "Crear",
     "create-accounting-entry": "Crear Assentament Comptable",
     "create-delivery-note": "Crear albarà",
