--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -319,6 +319,7 @@
     "counterpart": "Counterpart",
     "countries": "Countries",
     "country": "Country",
+    "country-not-in-eu": "El %codiso% no pertenece a ningún país de la unión Europea",
     "create": "Create",
     "create-accounting-entry": "Create Accounting Entry",
     "create-delivery-note": "Create delivery note",
