--- a/Core/Translation/es_GT.json
+++ b/Core/Translation/es_GT.json
@@ -319,6 +319,7 @@
     "counterpart": "Contrapartida",
     "countries": "Países",
     "country": "País",
+    "country-not-in-eu": "El %codiso% no pertenece a ningún país de la unión Europea",
     "create": "Crear",
     "create-accounting-entry": "Crear Asiento Contable",
     "create-delivery-note": "Crear envío",
