Añadida vista html para el controlador root.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -180,7 +180,7 @@
     "cancel": "Cancel·lar",
     "cancel-data": "Cancel·lar canvis o operació",
     "cancelled": "Cancel·lat",
-    "cannot-generate-accounting-entry": "Error al generar el asiento de la factura %invoice%",
+    "cannot-generate-accounting-entry": "Error en generar el seient de la factura %invoice%",
     "cant-assign-date-already-regularized": "No es pot assignar la data %date% perquè ja hi ha una regularització de %tax% per aquest període.",
     "cant-assing-subaccount-supplier": "Impossible associar el subcompte per al proveïdor %supplierCode%",
     "cant-associate-customer-subaccount": "Impossible associar el subcompte per al client %customerCode%",
@@ -319,7 +319,7 @@
     "counterpart": "Contrapartida",
     "countries": "Països",
     "country": "País",
-    "country-not-in-eu": "El %codiso% no pertenece a ningún país de la unión Europea",
+    "country-not-in-eu": "El %codiso% no pertany a cap país de la Unió Europea",
     "create": "Crear",
     "create-accounting-entry": "Crear Assentament Comptable",
     "create-delivery-note": "Crear albarà",
@@ -493,7 +493,7 @@
     "email-not-configured": "Email no configurat. Podeu configurar l'email des del menú administrador, panell de control, preferències d'aplicació.",
     "email-not-sent": "No enviat",
     "email-notification": "Notificació per email",
-    "email-notification-disabled": "La notificación de email %name% está desactivada",
+    "email-notification-disabled": "La notificació de correu electrònic %name% està desactivada",
     "email-notification-not-exists": "Notificació de email %name% no trobada",
     "email-replies": "Respuesta de emails",
     "email-replies-to": "Les respostes a aquest email aniran a %email%",
@@ -1369,13 +1369,13 @@
     "soap-extension-not-installed": "L'extensió SOAP no està activada al PHP. Contacta amb el teu proveïdor de hosting per activar-la.",
     "social-security-number": "Nombre Seguretat Social",
     "sort": "Ordre",
-    "sort-by-column": "Ordenar por columna",
+    "sort-by-column": "Ordenar per columna",
     "sort-by-date-asc": "Ordenar per data desc.",
     "sort-by-date-desc": "Ordenar per data desc",
     "sort-by-ref-asc": "Ordenar per referència asc.",
     "sort-by-ref-desc": "Ordenar por referencia desc.",
-    "sorted-asc": "Ordenado ascendente",
-    "sorted-desc": "Ordenado descendente",
+    "sorted-asc": "Ordenat ascendent",
+    "sorted-desc": "Ordenat descendent",
     "source": "Font",
     "source-code": "Codi font",
     "special-account": "Compte especial",
