Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -260,6 +260,7 @@
     "color-success": "Color exit",
     "color-warning": "Color advertiment",
     "colors": "Colors",
+    "column": "Columna",
     "columns": "Columnes",
     "combination-code": "Codi de combinació",
     "combinations": "Combinacions",
@@ -1051,6 +1052,7 @@
     "opening-acounting-completed": "Obertura d'exercici correcta",
     "opening-operation": "Obertura",
     "operation": "Operació",
+    "operator": "Operador",
     "option": "Opció",
     "optional": "Opcional",
     "options": "Opcions",
@@ -1302,6 +1304,8 @@
     "save-filter": "Desa el filtre",
     "sdk": "SDK",
     "search": "Cercar",
+    "search-document": "Escriu el número de %doctype% per cercar.",
+    "search-product": "Cercar producte",
     "second-hand": "Segona mà",
     "second-quarter": "2n trimestre",
     "second-trimester": "Segon trimestre",
