--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -260,6 +260,7 @@
     "color-success": "Color success",
     "color-warning": "Color warning",
     "colors": "Colors",
+    "column": "Column",
     "columns": "Columns",
     "combination-code": "Combination code",
     "combinations": "Combinations",
@@ -1051,6 +1052,7 @@
     "opening-acounting-completed": "Opening acounting completed",
     "opening-operation": "Opening",
     "operation": "Operation",
+    "operator": "Operator",
     "option": "Option",
     "optional": "optional",
     "options": "Options",
@@ -1302,6 +1304,8 @@
     "save-filter": "Save filter",
     "sdk": "SDK",
     "search": "Search",
+    "search-document": "Type the number of %doctype% to search.",
+    "search-product": "Search product",
     "second-hand": "Second hand",
     "second-quarter": "2nd quarter",
     "second-trimester": "Second trimester",
