--- a/Core/Translation/es_UY.json
+++ b/Core/Translation/es_UY.json
@@ -260,6 +260,7 @@
     "color-success": "Color éxito",
     "color-warning": "Color advertencia",
     "colors": "Colores",
+    "column": "Columna",
     "columns": "Columnas",
     "combination-code": "Código de combinación",
     "combinations": "Combinaciones.",
@@ -1051,6 +1052,7 @@
     "opening-acounting-completed": "Apertura de ejercicio correcta",
     "opening-operation": "Apertura",
     "operation": "Operación",
+    "operator": "Operador",
     "option": "Opción",
     "optional": "opcional",
     "options": "Opciones",
@@ -1302,6 +1304,8 @@
     "save-filter": "Guardar filtro",
     "sdk": "SDK",
     "search": "Buscar",
+    "search-document": "Escribe el número de %doctype% para buscar.",
+    "search-product": "Buscar producto",
     "second-hand": "Segunda mano",
     "second-quarter": "2º trimestre",
     "second-trimester": "Segundo trimestre",
