--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -260,6 +260,7 @@
     "color-success": "Kolore arrakasta",
     "color-warning": "Kolore oharra",
     "colors": "Koloreak",
+    "column": "Zutabea",
     "columns": "Zutabeak",
     "combination-code": "Konbinazio kodea",
     "combinations": "Konbinazioak",
@@ -1051,6 +1052,7 @@
     "opening-acounting-completed": "Ekitaldi irekitze zuzena",
     "opening-operation": "Irekitzea",
     "operation": "Operazioa",
+    "operator": "Operadorea",
     "option": "Aukera",
     "optional": "aukerakoa",
     "options": "Aukerak",
@@ -1302,6 +1304,8 @@
     "save-filter": "Gorde iragazkia",
     "sdk": "SDK",
     "search": "Bilatu",
+    "search-document": "Idatzi bilaketa egiteko %doctype% kopurua.",
+    "search-product": "Produktua bilatu",
     "second-hand": "Bigarren eskukoa",
     "second-quarter": "2. hiruhilekoa",
     "second-trimester": "Bigarren hiruhilekoa",
