--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -260,6 +260,7 @@
     "color-success": "Color éxito",
     "color-warning": "Color advertencia",
     "colors": "Couleurs",
+    "column": "Columna",
     "columns": "Colonnes",
     "combination-code": "Code de combinaison",
     "combinations": "Combinaisons",
@@ -1051,6 +1052,7 @@
     "opening-acounting-completed": "Ouverture de l'exercice achevée",
     "opening-operation": "Apertura",
     "operation": "Operación",
+    "operator": "Operador",
     "option": "option",
     "optional": "Optionnel",
     "options": "Options",
@@ -1302,6 +1304,8 @@
     "save-filter": "Enregistrer le filtre",
     "sdk": "SDK",
     "search": "Chercher",
+    "search-document": "Entrez le numéro du\/de la %doctype% à rechercher.",
+    "search-product": "Rechercher un produit",
     "second-hand": "Segunda mano",
     "second-quarter": "2º trimestre",
     "second-trimester": "Second trimestre",
