--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -260,6 +260,7 @@
     "color-success": "Cor éxito",
     "color-warning": "Cor advertencia",
     "colors": "Cores",
+    "column": "Columna",
     "columns": "Columnas",
     "combination-code": "Código de combinación",
     "combinations": "Combinacións",
@@ -1051,6 +1052,7 @@
     "opening-acounting-completed": "Apertura de exercicio correcta",
     "opening-operation": "Apertura",
     "operation": "Operación",
+    "operator": "Operador",
     "option": "Opción",
     "optional": "opcional",
     "options": "Opciones",
@@ -1302,6 +1304,8 @@
     "save-filter": "Gardar filtro",
     "sdk": "SDK",
     "search": "Busca",
+    "search-document": "Escribe el número de %doctype% para buscar.",
+    "search-product": "Buscar produto",
     "second-hand": "Segunda man",
     "second-quarter": "2º trimestre",
     "second-trimester": "Segundo trimestre",
