--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -260,6 +260,7 @@
     "color-success": "Color éxito",
     "color-warning": "Color advertencia",
     "colors": "colors",
+    "column": "Columna",
     "columns": "Columns",
     "combination-code": "Combination code",
     "combinations": "combinazioni",
@@ -1051,6 +1052,7 @@
     "opening-acounting-completed": "opening-acounting-completed",
     "opening-operation": "Apertura",
     "operation": "Operación",
+    "operator": "Operador",
     "option": "opzione",
     "optional": "facoltativo",
     "options": "opzioni",
@@ -1302,6 +1304,8 @@
     "save-filter": "Salva Filtro",
     "sdk": "sdk",
     "search": "Ricerca",
+    "search-document": "Escribe el número de %doctype% para buscar.",
+    "search-product": "Search product",
     "second-hand": "Segunda mano",
     "second-quarter": "2º trimestre",
     "second-trimester": "Second trimester",
