--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -260,6 +260,7 @@
     "color-success": "Color éxito",
     "color-warning": "Color advertencia",
     "colors": "Colors",
+    "column": "Columna",
     "columns": "Columnes",
     "combination-code": "Còdic de combinació",
     "combinations": "Combinacions",
@@ -1051,6 +1052,7 @@
     "opening-acounting-completed": "Obertura d'exercici correcta",
     "opening-operation": "Apertura",
     "operation": "Operación",
+    "operator": "Operador",
     "option": "Opció",
     "optional": "opcional",
     "options": "Opcions",
@@ -1302,6 +1304,8 @@
     "save-filter": "Alçar el filtre",
     "sdk": "SDK",
     "search": "Busca",
+    "search-document": "Escribe el número de %doctype% para buscar.",
+    "search-product": "Search product",
     "second-hand": "Segunda mano",
     "second-quarter": "2º trimestre",
     "second-trimester": "Segon trimestre",
