--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -260,6 +260,7 @@
     "color-success": "Color éxito",
     "color-warning": "Color advertencia",
     "colors": "Farben",
+    "column": "Columna",
     "columns": "Spalten",
     "combination-code": "Kombinationscode",
     "combinations": "Kombinationen",
@@ -1051,6 +1052,7 @@
     "opening-acounting-completed": "opening-acounting-completed",
     "opening-operation": "Apertura",
     "operation": "Operación",
+    "operator": "Operador",
     "option": "Option",
     "optional": "optional",
     "options": "Optionen",
@@ -1302,6 +1304,8 @@
     "save-filter": "save-filter",
     "sdk": "sdk",
     "search": "Suche",
+    "search-document": "Escribe el número de %doctype% para buscar.",
+    "search-product": "Search product",
     "second-hand": "Segunda mano",
     "second-quarter": "2º trimestre",
     "second-trimester": "Second trimester",
