--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -260,6 +260,7 @@
     "color-success": "Color éxito",
     "color-warning": "Color advertencia",
     "colors": "colors",
+    "column": "Columna",
     "columns": "Columns",
     "combination-code": "Combination code",
     "combinations": "Combinações",
@@ -1051,6 +1052,7 @@
     "opening-acounting-completed": "opening-acounting-completed",
     "opening-operation": "Apertura",
     "operation": "Operación",
+    "operator": "Operador",
     "option": "Opção",
     "optional": "optional",
     "options": "Opções",
@@ -1302,6 +1304,8 @@
     "save-filter": "Salvar Filtros",
     "sdk": "sdk",
     "search": "Pesquisa",
+    "search-document": "Escribe el número de %doctype% para buscar.",
+    "search-product": "Search product",
     "second-hand": "Segunda mano",
     "second-quarter": "2º trimestre",
     "second-trimester": "Segundo Trimestre",
